<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="20dp"
    app:cardMaxElevation="12dp"
    app:cardPreventCornerOverlap="true"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/items_layout_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            />
        <TextView
            android:id="@+id/items_layout_tv_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            />
        <TextView
            android:id="@+id/items_layout_tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textColor="@color/black"
            android:layout_marginStart="4dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/items_layout_tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                />
            <TextView
                android:id="@+id/items_layout_btn_add_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart"
                android:textColor="@color/color_btn"
                android:layout_weight="3"
                />
        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>